New cluster funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(ci_var)
 export(cleanNames)
 export(cleanText)
 export(clusterKmeans)
+export(clusterOptimalK)
+export(clusterVisualK)
 export(conf_mat)
 export(corr)
 export(corr_cross)
