--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ export(mplot_metrics)
 export(mplot_response)
 export(mplot_roc)
 export(mplot_splits)
+export(mplot_topcats)
 export(mse)
 export(msplit)
 export(myip)
