Restructured model pre-procesing fxs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ export(mailSend)
 export(mape)
 export(missingness)
 export(model_metrics)
+export(model_preprocess)
 export(move_files)
 export(mplot_conf)
 export(mplot_cuts)
