export_plot for mplots and further data checks on pre-processing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -286,6 +286,7 @@ importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_colnames)
+importFrom(magrittr,set_names)
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,copyWorkbook)
 importFrom(openxlsx,getSheetNames)
