--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ export(corr_var)
 export(crosstab)
 export(daily_portfolio)
 export(daily_stocks)
-export(dalex_explainer)
 export(dalex_local)
 export(dalex_residuals)
 export(dalex_variable)
@@ -82,6 +81,7 @@ export(gg_text_customs)
 export(glued)
 export(grepl_letters)
 export(h2o_automl)
+export(h2o_explainer)
 export(h2o_predict_API)
 export(h2o_predict_MOJO)
 export(h2o_predict_binary)
