--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -35,7 +35,8 @@ jobs:
         run: |
           install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
-          remotes::install_dev("pkgdown")
+          # remotes::install_dev("pkgdown")
+          install.packages("pkgdown")
         shell: Rscript {0}
 
       - name: Install package
