New scale_x_abbr and scale_y_abbr fxs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,9 +166,11 @@ export(right)
 export(rmse)
 export(rsq)
 export(rsqa)
+export(scale_x_abbr)
 export(scale_x_comma)
 export(scale_x_dollar)
 export(scale_x_percent)
+export(scale_y_abbr)
 export(scale_y_comma)
 export(scale_y_dollar)
 export(scale_y_percent)
