--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,6 +194,7 @@ export(stocks_hist)
 export(stocks_obj)
 export(stocks_quote)
 export(stocks_report)
+export(sudoku_solver)
 export(summer)
 export(target_set)
 export(textCloud)
