Welcome trim_mp3()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -208,6 +208,7 @@ export(topics_rake)
 export(tree_var)
 export(trendsRelated)
 export(trendsTime)
+export(trim_mp3)
 export(try_require)
 export(updateLares)
 export(v2t)
