--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,10 @@ Authors@R: c(
     person("Bernardo", "Lares", , "laresbernardo@gmail.com", c("aut", "cre")))
 Maintainer: Bernardo Lares <laresbernardo@gmail.com>
 Description: R library for better/faster analytics, visualization, data mining, and machine learning 
-    tasks. With a wide variety of family functions, such as Machine Learning, Data Wrangling, 
+    tasks. With a wide variety of family functions, like Machine Learning, Data Wrangling, 
     Exploratory, and Scrapper, it helps the analyst or data scientist to get quick and robust 
-    results, without the need of repetitive coding or extensive programming skills. 
+    results, without the need of repetitive coding or extensive programming skills.
 Imports: 
-    config,
     dplyr,
     ggplot2,
     h2o,
@@ -27,7 +26,8 @@ Imports:
     scales,
     stringr,
     tidyr,
-    xml2
+    xml2,
+    yaml
 Suggests:
     beepr,
     DALEX,
