--- a/NAMESPACE
+++ b/NAMESPACE
@@ -161,7 +161,6 @@ export(removenacols)
 export(removenarows)
 export(replaceall)
 export(replacefactor)
-export(resettictoc)
 export(right)
 export(rmse)
 export(rsq)
@@ -222,7 +221,6 @@ import(dplyr)
 import(ggplot2)
 import(rlist)
 import(stringr)
-importFrom(config,get)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,dev.size)
 importFrom(grDevices,graphics.off)
@@ -365,3 +363,4 @@ importFrom(utils,type.convert)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
 importFrom(xml2,read_html)
+importFrom(yaml,read_yaml)
