feat: New remove_stopwords and ngrams functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ export(mplot_topcats)
 export(mse)
 export(msplit)
 export(myip)
+export(ngrams)
 export(noPlot)
 export(normalize)
 export(num_abbr)
@@ -157,6 +158,7 @@ export(quo_val)
 export(rbind_full)
 export(read.file)
 export(readGS)
+export(remove_stopwords)
 export(removenacols)
 export(removenarows)
 export(replaceall)
