--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ S3method(plot,h2o_shap)
 S3method(print,h2o_automl)
 export("%>%")
 export(ROC)
+export(are_binary)
+export(are_constant)
+export(are_id)
 export(autoline)
 export(balance_data)
 export(bindfiles)
@@ -97,7 +100,8 @@ export(importxlsx)
 export(impute)
 export(install_recommended)
 export(ip_country)
-export(isURL)
+export(is_ip)
+export(is_url)
 export(iter_seeds)
 export(json2vector)
 export(lares_pal)
