--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -3,10 +3,10 @@ on:
     branches:
       - master
 
-name: pkgdown
+name: documentation
 
 jobs:
-  pkgdown:
+  documentation:
     runs-on: macOS-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
