--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(gg_pie)
 export(gg_text_customs)
 export(glued)
 export(grepl_letters)
+export(grepm)
 export(h2o_automl)
 export(h2o_explainer)
 export(h2o_predict_API)
