style: Improved correlations format suggested on https://github.com/laresbernardo/lares/issues/31

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(fb_post)
 export(fb_posts)
 export(fb_process)
 export(fb_rf)
+export(fb_token)
 export(file_name)
 export(filesGD)
 export(files_functions)
