Fix: training_frame was not class h2o because of quiet. New quiet_h2o()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -253,6 +253,7 @@ importFrom(h2o,h2o.predict)
 importFrom(h2o,h2o.predict_json)
 importFrom(h2o,h2o.removeAll)
 importFrom(h2o,h2o.saveModel)
+importFrom(h2o,h2o.show_progress)
 importFrom(h2o,h2o.varimp)
 importFrom(h2o,predict_contributions.H2OModel)
 importFrom(httr,GET)
