--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,h2o_automl)
 S3method(plot,h2o_shap)
+S3method(plot,x2y)
 S3method(print,h2o_automl)
 export("%>%")
 export(ROC)
@@ -218,6 +219,8 @@ export(v2t)
 export(vector2text)
 export(winsorize)
 export(writeGS)
+export(x2y)
+export(x2y_calc)
 export(year_month)
 export(year_week)
 export(zerovar)
