feat: included rpart dep for x2y fxs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -220,7 +220,8 @@ export(vector2text)
 export(winsorize)
 export(writeGS)
 export(x2y)
-export(x2y_calc)
+export(x2y_metric)
+export(x2y_plot)
 export(year_month)
 export(year_week)
 export(zerovar)
@@ -314,6 +315,8 @@ importFrom(patchwork,plot_layout)
 importFrom(patchwork,wrap_plots)
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
+importFrom(rpart,rpart)
+importFrom(rpart,rpart.control)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
 importFrom(rvest,html_node)
