feat: new corr param for x2y() to compare x2y with mean abs correlations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,h2o_automl)
 S3method(plot,h2o_shap)
 S3method(plot,x2y)
+S3method(plot,x2y_preds)
 S3method(print,h2o_automl)
 export("%>%")
 export(ROC)
@@ -221,7 +222,7 @@ export(winsorize)
 export(writeGS)
 export(x2y)
 export(x2y_metric)
-export(x2y_plot)
+export(x2y_preds)
 export(year_month)
 export(year_week)
 export(zerovar)
