feat: new stocks report template with relative time periods tabs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -278,6 +278,7 @@ importFrom(jsonlite,flatten)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(lubridate,"%m+%")
+importFrom(lubridate,"%m-%")
 importFrom(lubridate,ceiling_date)
 importFrom(lubridate,date)
 importFrom(lubridate,day)
@@ -293,6 +294,7 @@ importFrom(lubridate,wday)
 importFrom(lubridate,week)
 importFrom(lubridate,weeks)
 importFrom(lubridate,year)
+importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
 importFrom(magrittr,"%>%")
