New cache_* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,9 @@ export(autoline)
 export(balance_data)
 export(bindfiles)
 export(bring_api)
+export(cache_exists)
+export(cache_read)
+export(cache_write)
 export(categ_reducer)
 export(check_attr)
 export(check_opts)
