feat: new rtistry file + improved spread_list compatibility with un-nammed list columns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,6 +176,7 @@ export(right)
 export(rmse)
 export(rsq)
 export(rsqa)
+export(rtistry_sphere)
 export(scale_x_abbr)
 export(scale_x_comma)
 export(scale_x_dollar)
