docs: examples for scale_x/y_* + feat: new scale_x/y_formatNum fxs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,10 +180,12 @@ export(rtistry_sphere)
 export(scale_x_abbr)
 export(scale_x_comma)
 export(scale_x_dollar)
+export(scale_x_formatNum)
 export(scale_x_percent)
 export(scale_y_abbr)
 export(scale_y_comma)
 export(scale_y_dollar)
+export(scale_y_formatNum)
 export(scale_y_percent)
 export(scrabble_dictionary)
 export(scrabble_points)
