--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -7,7 +7,7 @@ name: documentation
 
 jobs:
   documentation:
-    runs-on: macOS-latest
+    runs-on: macOS-4.0.3
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
