docs: Add @return to all functions (part 2)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(autoline)
 export(balance_data)
 export(bindfiles)
 export(bring_api)
+export(cache_clear)
 export(cache_exists)
 export(cache_read)
 export(cache_write)
