docs: fixed donttest's and dontrun's

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,7 +100,7 @@ export(image_metadata)
 export(importxlsx)
 export(impute)
 export(install_recommended)
-export(ip_country)
+export(ip_data)
 export(is_ip)
 export(is_url)
 export(iter_seeds)
