--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 5.0.1
 Authors@R: c(
     person("Bernardo", "Lares", , "laresbernardo@gmail.com", c("aut", "cre")))
 Maintainer: Bernardo Lares <laresbernardo@gmail.com>
-Description: R library for better/faster analytics, visualization, data mining, and machine learning 
+Description: Auxiliary package for better/faster analytics, visualization, data mining, and machine learning 
     tasks. With a wide variety of family functions, like Machine Learning, Data Wrangling, 
     Exploratory, and Scrapper, it helps the analyst or data scientist to get quick and robust 
     results, without the need of repetitive coding or extensive programming skills.
