--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lares
 Type: Package
 Title: Analytics, Data Mining & Machine Learning Sidekick
-Version: 5.0.1
+Version: 5.0.2
 Authors@R: c(
     person("Bernardo", "Lares", , "laresbernardo@gmail.com", c("aut", "cre")))
 Maintainer: Bernardo Lares <laresbernardo@gmail.com>
@@ -24,11 +24,12 @@ Imports:
     pROC,
     rlang,
     rpart,
-    rvest (>= 1.0.0),
+    rvest,
     scales,
     stringr,
     tidyr,
-    yaml
+    yaml,
+    xml2
 Suggests:
     beepr,
     DALEX,
