--- a/NAMESPACE
+++ b/NAMESPACE
@@ -325,7 +325,6 @@ importFrom(rvest,html_node)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_table)
 importFrom(rvest,html_text)
-importFrom(rvest,read_html)
 importFrom(scales,comma)
 importFrom(scales,dollar)
 importFrom(scales,percent)
@@ -375,4 +374,5 @@ importFrom(utils,tail)
 importFrom(utils,type.convert)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
+importFrom(xml2,read_html)
 importFrom(yaml,read_yaml)
