feat: new cran_logs() function to download and plot CRAN stats + improved check_opts() wording

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(conf_mat)
 export(corr)
 export(corr_cross)
 export(corr_var)
+export(cran_logs)
 export(crosstab)
 export(daily_portfolio)
 export(daily_stocks)
