feat: boosted tree_var() results + docs: improved inherits for model_metrics() + feat: model_metrics() new auto_n param

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -237,6 +237,7 @@ importFrom(graphics,box)
 importFrom(graphics,grid)
 importFrom(graphics,hist)
 importFrom(graphics,legend)
+importFrom(graphics,mtext)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,rasterImage)
