feat: included rpart.plot dep

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -321,6 +321,8 @@ importFrom(rlang,.data)
 importFrom(rlang,as_label)
 importFrom(rpart,rpart)
 importFrom(rpart,rpart.control)
+importFrom(rpart.plot,rpart.plot)
+importFrom(rpart.plot,rpart.rules)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_attrs)
 importFrom(rvest,html_node)
