--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -50,5 +50,8 @@ jobs:
           git config --global user.name "$PERSONAL_NAME"
 
       - name: Build and deploy pkgdown site
-        run: pkgdown::deploy_to_branch(new_process = FALSE)
+        run: pkgdown::deploy_to_branch(
+          new_process = FALSE,
+          lazy = TRUE,
+          devel = TRUE)
         shell: Rscript {0}
