test: try clean param on deploy_to_banch() https://github.com/r-lib/pkgdown/issues/1728

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Build and deploy pkgdown site
         run: pkgdown::deploy_to_branch(
+          clean = TRUE,
           new_process = FALSE,
           override = list(
             template = list(
