--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -50,13 +50,5 @@ jobs:
           git config --global user.name "$PERSONAL_NAME"
 
       - name: Build and deploy pkgdown site
-        run: pkgdown::deploy_to_branch(
-          clean = TRUE,
-          new_process = FALSE,
-          override = list(
-            template = list(
-              bootswatch = "united",
-              params = list(ganalytics = "UA-166493168-2")
-            )
-          ))
+        run: pkgdown::deploy_to_branch(new_process = FALSE)
         shell: Rscript {0}
