--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,7 +46,7 @@ Suggests:
     rtweet,
     tm,
     wordcloud
-URL: https://github.com/laresbernardo/lares
+URL: https://github.com/laresbernardo/lares, https://laresbernardo.github.io/lares/
 BugReports: https://github.com/laresbernardo/lares/issues
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
