fix: no more warnings for !!!enquos(...)[n] https://github.com/r-lib/rlang/issues/1233

--- a/inst/_pkgdown.yml
+++ b/inst/_pkgdown.yml
@@ -1,7 +1,10 @@
-url: https://laresbernardo.github.io/lares
+url: https://laresbernardo.github.io/lares/
 
 template:
   bootswatch: united
   params:
     ganalytics: UA-166493168-2
     noindex: false
+    docsearch:
+      api_key: 8f10af11a453848d52a117d320840d76
+      index_name: lares
