feat: New reduce_pca and reduce_tsne functions reduction dims

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -161,6 +161,7 @@ export(queryGA)
 export(quiet)
 export(read.file)
 export(readGS)
+export(reduce_pca)
 export(remove_stopwords)
 export(removenacols)
 export(removenarows)
