fix: Improved distinct logic for clustering functions and fixed some warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -161,6 +161,7 @@ export(quiet)
 export(read.file)
 export(readGS)
 export(reduce_pca)
+export(reduce_tsne)
 export(remove_stopwords)
 export(removenacols)
 export(removenarows)
