docs: added example to change palette with options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(get_tweets)
 export(gg_colour_customs)
 export(gg_fill_customs)
 export(gg_text_customs)
+export(gg_vals)
 export(glued)
 export(grepl_letters)
 export(grepm)
@@ -228,7 +229,6 @@ export(year_week)
 export(zerovar)
 import(dplyr)
 import(ggplot2)
-import(stringr)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,dev.size)
 importFrom(grDevices,graphics.off)
@@ -351,6 +351,14 @@ importFrom(stats,sd)
 importFrom(stats,start)
 importFrom(stats,var)
 importFrom(stats,xtabs)
+importFrom(stringr,fixed)
+importFrom(stringr,str_count)
+importFrom(stringr,str_length)
+importFrom(stringr,str_pad)
+importFrom(stringr,str_replace_all)
+importFrom(stringr,str_split)
+importFrom(stringr,str_to_title)
+importFrom(stringr,word)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
 importFrom(utils,URLencode)
