--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,h2o_automl)
 S3method(plot,h2o_shap)
+S3method(plot,stocks_hist)
 S3method(plot,x2y)
 S3method(plot,x2y_preds)
 S3method(print,h2o_automl)
