docs: explicityly exported dplyr functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -228,8 +228,53 @@ export(x2y_preds)
 export(year_month)
 export(year_week)
 export(zerovar)
-import(dplyr)
 import(ggplot2)
+importFrom(dplyr,any_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
+importFrom(dplyr,contains)
+importFrom(dplyr,count)
+importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
+importFrom(dplyr,distinct_at)
+importFrom(dplyr,everything)
+importFrom(dplyr,filter)
+importFrom(dplyr,first)
+importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,lag)
+importFrom(dplyr,last)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,mutate_if)
+importFrom(dplyr,n)
+importFrom(dplyr,ntile)
+importFrom(dplyr,one_of)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,rename_at)
+importFrom(dplyr,right_join)
+importFrom(dplyr,row_number)
+importFrom(dplyr,rowwise)
+importFrom(dplyr,sample_n)
+importFrom(dplyr,select)
+importFrom(dplyr,select_if)
+importFrom(dplyr,slice)
+importFrom(dplyr,starts_with)
+importFrom(dplyr,summarise)
+importFrom(dplyr,summarise_all)
+importFrom(dplyr,summarise_if)
+importFrom(dplyr,summarize)
+importFrom(dplyr,summarize_all)
+importFrom(dplyr,tally)
+importFrom(dplyr,tibble)
+importFrom(dplyr,transmute_if)
+importFrom(dplyr,ungroup)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,dev.size)
 importFrom(grDevices,graphics.off)
