--- a/NAMESPACE
+++ b/NAMESPACE
@@ -228,7 +228,6 @@ export(x2y_preds)
 export(year_month)
 export(year_week)
 export(zerovar)
-import(ggplot2)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
@@ -275,6 +274,90 @@ importFrom(dplyr,tally)
 importFrom(dplyr,tibble)
 importFrom(dplyr,transmute_if)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
+importFrom(ggplot2,annotate)
+importFrom(ggplot2,coord_equal)
+importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,enquo)
+importFrom(ggplot2,enquos)
+importFrom(ggplot2,expand_limits)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_abline)
+importFrom(ggplot2,geom_area)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_col)
+importFrom(ggplot2,geom_density)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_jitter)
+importFrom(ggplot2,geom_label)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_path)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_polygon)
+importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_smooth)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,guide_colorbar)
+importFrom(ggplot2,guide_colourbar)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,last_plot)
+importFrom(ggplot2,margin)
+importFrom(ggplot2,position_dodge)
+importFrom(ggplot2,position_fill)
+importFrom(ggplot2,position_jitter)
+importFrom(ggplot2,position_stack)
+importFrom(ggplot2,quo_name)
+importFrom(ggplot2,quos)
+importFrom(ggplot2,rel)
+importFrom(ggplot2,scale_color_brewer)
+importFrom(ggplot2,scale_color_identity)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_colour_brewer)
+importFrom(ggplot2,scale_colour_continuous)
+importFrom(ggplot2,scale_colour_gradient)
+importFrom(ggplot2,scale_colour_identity)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,scale_fill_brewer)
+importFrom(ggplot2,scale_fill_continuous)
+importFrom(ggplot2,scale_fill_gradient)
+importFrom(ggplot2,scale_fill_grey)
+importFrom(ggplot2,scale_fill_identity)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_shape_identity)
+importFrom(ggplot2,scale_size)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_date)
+importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,scale_x_reverse)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,sec_axis)
+importFrom(ggplot2,stat_density_2d)
+importFrom(ggplot2,stat_ecdf)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,unit)
+importFrom(ggplot2,update_geom_defaults)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,xlim)
+importFrom(ggplot2,ylab)
+importFrom(ggplot2,ylim)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,dev.size)
 importFrom(grDevices,graphics.off)
