feat: new year_quarter()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -226,6 +226,7 @@ export(x2y)
 export(x2y_metric)
 export(x2y_preds)
 export(year_month)
+export(year_quarter)
 export(year_week)
 export(zerovar)
 importFrom(dplyr,any_of)
