feat: new splot_divs() for dividends

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,6 +191,7 @@ export(sentimentBreakdown)
 export(shap_var)
 export(slackSend)
 export(splot_change)
+export(splot_divs)
 export(splot_etf)
 export(splot_growth)
 export(splot_roi)
