feat: new print_coloured() and wordle_* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -154,6 +154,7 @@ export(plot_nums)
 export(plot_palette)
 export(plot_survey)
 export(plot_timeline)
+export(print_coloured)
 export(prophesize)
 export(quants)
 export(queryDB)
@@ -222,6 +223,9 @@ export(updateLares)
 export(v2t)
 export(vector2text)
 export(winsorize)
+export(wordle_check)
+export(wordle_dictionary)
+export(wordle_simulation)
 export(writeGS)
 export(x2y)
 export(x2y_metric)
@@ -508,6 +512,7 @@ importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
 importFrom(utils,object.size)
 importFrom(utils,packageVersion)
+importFrom(utils,read.delim)
 importFrom(utils,read.table)
 importFrom(utils,remove.packages)
 importFrom(utils,tail)
