reformat: docs and some functions names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(are_constant)
 export(are_id)
 export(autoline)
 export(balance_data)
-export(bindfiles)
+export(bind_files)
 export(bring_api)
 export(cache_clear)
 export(cache_exists)
@@ -67,8 +67,9 @@ export(filesGD)
 export(files_functions)
 export(font_exists)
 export(forecast_arima)
+export(formatColoured)
+export(formatHTML)
 export(formatNum)
-export(formatText)
 export(freqs)
 export(freqs_df)
 export(freqs_list)
@@ -115,7 +116,7 @@ export(list_cats)
 export(listfiles)
 export(loglossBinary)
 export(mae)
-export(mailSend)
+export(mail_send)
 export(mape)
 export(missingness)
 export(model_metrics)
@@ -154,7 +155,6 @@ export(plot_nums)
 export(plot_palette)
 export(plot_survey)
 export(plot_timeline)
-export(print_coloured)
 export(prophesize)
 export(quants)
 export(queryDB)
