--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,8 @@ export(gg_vals)
 export(glued)
 export(grepl_letters)
 export(grepm)
+export(gtrends_related)
+export(gtrends_time)
 export(h2o_automl)
 export(h2o_explainer)
 export(h2o_predict_API)
@@ -215,8 +217,6 @@ export(tic)
 export(toc)
 export(topics_rake)
 export(tree_var)
-export(trendsRelated)
-export(trendsTime)
 export(trim_mp3)
 export(try_require)
 export(updateLares)
