feat: print methods for wordle_* and iterations loop for multiple seeds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(plot,stocks_hist)
 S3method(plot,x2y)
 S3method(plot,x2y_preds)
 S3method(print,h2o_automl)
+S3method(print,wordle_check)
+S3method(print,wordle_simulation)
 export("%>%")
 export(ROC)
 export(are_binary)
