--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,6 +194,8 @@ export(scrabble_points)
 export(scrabble_score)
 export(scrabble_words)
 export(sentimentBreakdown)
+export(set_colnames)
+export(set_names)
 export(shap_var)
 export(slackSend)
 export(splot_change)
@@ -237,6 +239,7 @@ export(year_month)
 export(year_quarter)
 export(year_week)
 export(zerovar)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
@@ -436,9 +439,6 @@ importFrom(lubridate,year)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(lubridate,ymd_hms)
-importFrom(magrittr,"%>%")
-importFrom(magrittr,set_colnames)
-importFrom(magrittr,set_names)
 importFrom(openxlsx,addWorksheet)
 importFrom(openxlsx,copyWorkbook)
 importFrom(openxlsx,getSheetNames)
