feat: new exclude_here parameter on scrabble_words() for Wordle yellow tiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -513,6 +513,7 @@ importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
 importFrom(utils,object.size)
 importFrom(utils,packageVersion)
+importFrom(utils,read.csv)
 importFrom(utils,read.delim)
 importFrom(utils,read.table)
 importFrom(utils,remove.packages)
