feat: new warnifnot() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,6 +225,7 @@ export(try_require)
 export(updateLares)
 export(v2t)
 export(vector2text)
+export(warnifnot)
 export(winsorize)
 export(wordle_check)
 export(wordle_dictionary)
@@ -497,6 +498,7 @@ importFrom(stringr,str_to_title)
 importFrom(stringr,word)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
+importFrom(tidyr,unite)
 importFrom(utils,URLencode)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
