feat: new lares_logo() fun function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ export(is_ip)
 export(is_url)
 export(iter_seeds)
 export(json2vector)
+export(lares_logo)
 export(lares_pal)
 export(lasso_vars)
 export(left)
@@ -514,6 +515,7 @@ importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
 importFrom(utils,object.size)
+importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
 importFrom(utils,read.csv)
 importFrom(utils,read.delim)
