--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(fb_insights)
 export(fb_post)
 export(fb_posts)
 export(fb_process)
+export(fb_report_check)
 export(fb_rf)
 export(fb_token)
 export(file_name)
