feat: new chatgpt_ask()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(cache_exists)
 export(cache_read)
 export(cache_write)
 export(categ_reducer)
+export(chatgpt_ask)
 export(check_attr)
 export(check_opts)
 export(ci_lower)
