feat: new chatgpt_* functions to classify, tag, extract, format, convert, table, translate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,13 @@ export(cache_read)
 export(cache_write)
 export(categ_reducer)
 export(chatgpt_ask)
+export(chatgpt_classify)
+export(chatgpt_convert)
+export(chatgpt_extract)
+export(chatgpt_format)
+export(chatgpt_table)
+export(chatgpt_tag)
+export(chatgpt_translate)
 export(check_attr)
 export(check_opts)
 export(ci_lower)
