recode: rename chatgpt_*() to gpt_*()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,14 +23,6 @@ export(cache_exists)
 export(cache_read)
 export(cache_write)
 export(categ_reducer)
-export(chatgpt_ask)
-export(chatgpt_classify)
-export(chatgpt_convert)
-export(chatgpt_extract)
-export(chatgpt_format)
-export(chatgpt_table)
-export(chatgpt_tag)
-export(chatgpt_translate)
 export(check_attr)
 export(check_opts)
 export(ci_lower)
@@ -95,6 +87,14 @@ export(gg_fill_customs)
 export(gg_text_customs)
 export(gg_vals)
 export(glued)
+export(gpt_ask)
+export(gpt_classify)
+export(gpt_convert)
+export(gpt_extract)
+export(gpt_format)
+export(gpt_table)
+export(gpt_tag)
+export(gpt_translate)
 export(grepl_letters)
 export(grepm)
 export(gtrends_related)
