--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(cache_write)
 export(categ_reducer)
 export(check_attr)
 export(check_opts)
+export(chr2num)
 export(ci_lower)
 export(ci_upper)
 export(ci_var)
