feat: new chr2logical() + new gpt_prompter() functions + gpt_*() functions recoded

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(cache_write)
 export(categ_reducer)
 export(check_attr)
 export(check_opts)
+export(chr2logical)
 export(chr2num)
 export(ci_lower)
 export(ci_upper)
@@ -94,6 +95,7 @@ export(gpt_convert)
 export(gpt_extract)
 export(gpt_format)
 export(gpt_history)
+export(gpt_prompter)
 export(gpt_table)
 export(gpt_tag)
 export(gpt_translate)
