feat: new weighted_value() using FIFO/LIFO

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -239,6 +239,7 @@ export(updateLares)
 export(v2t)
 export(vector2text)
 export(warnifnot)
+export(weighted_value)
 export(what_size)
 export(winsorize)
 export(wordle_check)
