feat: new chr2date()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(cache_write)
 export(categ_reducer)
 export(check_attr)
 export(check_opts)
+export(chr2date)
 export(chr2logical)
 export(chr2num)
 export(ci_lower)
