feat: new hyps_builder()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ export(h2o_selectmodel)
 export(h2o_shap)
 export(haveInternet)
 export(holidays)
+export(hyps_builder)
 export(image_metadata)
 export(importxlsx)
 export(impute)
