feat: new robyn_modelselector() + normalize() for all equal values returns 1s

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,corr_var)
 S3method(plot,h2o_automl)
 S3method(plot,h2o_shap)
+S3method(plot,robyn_modelselector)
 S3method(plot,stocks_hist)
 S3method(plot,x2y)
 S3method(plot,x2y_preds)
@@ -191,6 +192,7 @@ export(replaceall)
 export(replacefactor)
 export(right)
 export(rmse)
+export(robyn_modelselector)
 export(rsq)
 export(rsqa)
 export(rtistry_sphere)
@@ -256,6 +258,7 @@ export(year_quarter)
 export(year_week)
 export(zerovar)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
@@ -292,6 +295,7 @@ importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,slice)
+importFrom(dplyr,slice_head)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
