--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,7 +116,6 @@ export(h2o_selectmodel)
 export(h2o_shap)
 export(haveInternet)
 export(holidays)
-export(hyps_builder)
 export(image_metadata)
 export(importxlsx)
 export(impute)
@@ -192,6 +191,7 @@ export(replaceall)
 export(replacefactor)
 export(right)
 export(rmse)
+export(robyn_hypsbuilder)
 export(robyn_modelselector)
 export(rsq)
 export(rsqa)
