feat: new cache_pipe() to automate the use of cache

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(bind_files)
 export(bring_api)
 export(cache_clear)
 export(cache_exists)
+export(cache_pipe)
 export(cache_read)
 export(cache_write)
 export(categ_reducer)
