feat: new maze solving functions inspired by micromouse competitions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(plot,stocks_hist)
 S3method(plot,x2y)
 S3method(plot,x2y_preds)
 S3method(print,h2o_automl)
+S3method(print,maze_solve)
 S3method(print,wordle_check)
 S3method(print,wordle_simulation)
 export("%>%")
@@ -139,6 +140,8 @@ export(mae)
 export(mail_send)
 export(mape)
 export(markdown2df)
+export(maze_gridsearch)
+export(maze_solve)
 export(missingness)
 export(model_metrics)
 export(model_preprocess)
