--- a/NAMESPACE
+++ b/NAMESPACE
@@ -509,6 +509,7 @@ importFrom(stats,pt)
 importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
+importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,start)
 importFrom(stats,var)
