feat: new gemini_* functions to interact with API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,8 @@ export(freqs_df)
 export(freqs_list)
 export(freqs_plot)
 export(gain_lift)
+export(gemini_ask)
+export(gemini_image)
 export(get_credentials)
 export(get_creds)
 export(get_currency)
