--- a/NAMESPACE
+++ b/NAMESPACE
@@ -276,6 +276,7 @@ importFrom(dplyr,count)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,distinct_at)
+importFrom(dplyr,ensym)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
