--- a/NAMESPACE
+++ b/NAMESPACE
@@ -199,6 +199,7 @@ export(right)
 export(rmse)
 export(robyn_hypsbuilder)
 export(robyn_modelselector)
+export(robyn_performance)
 export(rsq)
 export(rsqa)
 export(rtistry_sphere)
