--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,h2o_automl)
 S3method(plot,h2o_shap)
 S3method(plot,robyn_modelselector)
 S3method(plot,stocks_hist)
+S3method(plot,tree_var)
 S3method(plot,x2y)
 S3method(plot,x2y_preds)
 S3method(print,h2o_automl)
