recode: use (new) Robyn function instead for imm vs carr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -508,6 +508,8 @@ importFrom(stringr,str_split)
 importFrom(stringr,str_to_title)
 importFrom(stringr,word)
 importFrom(tidyr,gather)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
 importFrom(tidyr,unite)
 importFrom(utils,URLencode)
