--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(plot,x2y)
 S3method(plot,x2y_preds)
 S3method(print,h2o_automl)
 S3method(print,maze_solve)
+S3method(print,robyn_crossmmm)
 S3method(print,wordle_check)
 S3method(print,wordle_simulation)
 export("%>%")
@@ -198,6 +199,7 @@ export(replaceall)
 export(replacefactor)
 export(right)
 export(rmse)
+export(robyn_crossmmm)
 export(robyn_hypsbuilder)
 export(robyn_modelselector)
 export(robyn_performance)
