feat: new robyn_crossmmm2() for channel level optimization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -200,6 +200,7 @@ export(replacefactor)
 export(right)
 export(rmse)
 export(robyn_crossmmm)
+export(robyn_crossmmm2)
 export(robyn_hypsbuilder)
 export(robyn_modelselector)
 export(robyn_performance)
