docs: include deps and new fxs imported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -290,6 +290,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,lag)
 importFrom(dplyr,last)
 importFrom(dplyr,left_join)
+importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_at)
