--- a/NAMESPACE
+++ b/NAMESPACE
@@ -199,11 +199,11 @@ export(replaceall)
 export(replacefactor)
 export(right)
 export(rmse)
-export(robyn_crossmmm)
-export(robyn_crossmmm2)
 export(robyn_hypsbuilder)
 export(robyn_modelselector)
 export(robyn_performance)
+export(robyn_xchannels)
+export(robyn_xmodels)
 export(rsq)
 export(rsqa)
 export(rtistry_sphere)
