--- a/NAMESPACE
+++ b/NAMESPACE
@@ -199,10 +199,11 @@ export(replaceall)
 export(replacefactor)
 export(right)
 export(rmse)
-export(robyn_crossmmm)
 export(robyn_hypsbuilder)
 export(robyn_modelselector)
 export(robyn_performance)
+export(robyn_xchannels)
+export(robyn_xmodels)
 export(rsq)
 export(rsqa)
 export(rtistry_sphere)
@@ -289,6 +290,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,lag)
 importFrom(dplyr,last)
 importFrom(dplyr,left_join)
+importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_at)
