feat: new is_odd(), is_even() and seq_surnames() functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,7 +127,9 @@ export(importxlsx)
 export(impute)
 export(install_recommended)
 export(ip_data)
+export(is_even)
 export(is_ip)
+export(is_odd)
 export(is_url)
 export(iter_seeds)
 export(json2vector)
@@ -222,6 +224,7 @@ export(scrabble_points)
 export(scrabble_score)
 export(scrabble_words)
 export(sentimentBreakdown)
+export(seq_surnames)
 export(shap_var)
 export(slackSend)
 export(splot_change)
