feat: new robyn_margianl() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -202,6 +202,7 @@ export(replacefactor)
 export(right)
 export(rmse)
 export(robyn_hypsbuilder)
+export(robyn_marginal)
 export(robyn_modelselector)
 export(robyn_performance)
 export(robyn_xchannels)
