fix: rename outlier_tukey() and allow for turkey too #58 + cache new overwrite parameter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,6 +175,7 @@ export(num_abbr)
 export(numericalonly)
 export(ohe_commas)
 export(ohse)
+export(outlier_tukey)
 export(outlier_turkey)
 export(outlier_zscore)
 export(outlier_zscore_plot)
