feat: docs link and robyn_performance() metrics corrected [CRAN v5.2.13]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -280,6 +280,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_match)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
 importFrom(dplyr,count)
