--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,29 +15,29 @@ Depends:
 Imports:
     dplyr (>= 1.0.0),
     ggplot2 (>= 3.4.0),
-    httr,
-    jsonlite,
-    lubridate,
-    openxlsx,
-    patchwork,
-    pROC,
-    rlang,
-    rpart,
-    rpart.plot,
-    rvest,
-    stringr,
+    httr (>= 1.4.3),
+    jsonlite (>= 1.8.0),
+    lubridate (>= 1.7.9),
+    openxlsx (>= 3.5.10),
+    patchwork (>= 1.3.0),
+    pROC (>= 1.18.5),
+    rlang (>= 0.6.3),
+    rpart (>= 4.1.0),
+    rpart.plot (>= 3.1.0),
+    rvest (>= 1.0.0),
+    stringr (>= 1.4.2),
     tidyr (>= 1.0.0),
-    yaml
+    yaml (>= 2.2.4)
 Suggests:
-    beepr,
-    DALEX,
-    googleAuthR,
-    googlesheets4,
-    h2o,
-    knitr,
+    beepr (>= 0.1.5),
+    DALEX (>= 1.0.0),
+    googleAuthR (>= 1.0.0),
+    googlesheets4 (>= 1.0.0),
+    h2o (>= 3.24.0),
+    knitr (>= 1.31.0),
     MASS,
-    quantmod,
-    rmarkdown
+    quantmod (>= 0.4.20),
+    rmarkdown (>= 2.7)
 URL: https://github.com/laresbernardo/lares, https://laresbernardo.github.io/lares/
 BugReports: https://github.com/laresbernardo/lares/issues
 RoxygenNote: 7.3.2
