recode: codefactor fixes p7 (all return()'s removed)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lares
 Type: Package
-Title: Analytics & Machine Learning Sidekick
-Version: 5.2.15
+Title: Lean Analytics and Robust Exploration Sidekick
+Version: 5.3.0
 Authors@R: c(
     person("Bernardo", "Lares", , "laresbernardo@gmail.com", c("aut", "cre")))
 Maintainer: Bernardo Lares <laresbernardo@gmail.com>
