--- a/NAMESPACE
+++ b/NAMESPACE
@@ -272,6 +272,7 @@ export(year_quarter)
 export(year_week)
 export(zerovar)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
@@ -319,6 +320,7 @@ importFrom(dplyr,summarise_all)
 importFrom(dplyr,summarise_if)
 importFrom(dplyr,summarize)
 importFrom(dplyr,summarize_all)
+importFrom(dplyr,sym)
 importFrom(dplyr,tally)
 importFrom(dplyr,tibble)
 importFrom(dplyr,transmute_if)
