feat: new dont_sleep function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(db_upload)
 export(df_str)
 export(dist2d)
 export(distr)
+export(dont_sleep)
 export(errors)
 export(etf_sector)
 export(export_plot)
