feat: new dont_sleep_time()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(df_str)
 export(dist2d)
 export(distr)
 export(dont_sleep)
+export(dont_sleep_time)
 export(errors)
 export(etf_sector)
 export(export_plot)
