--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(dist2d)
 export(distr)
 export(dont_sleep)
 export(dont_sleep_time)
+export(encrypt_file)
 export(errors)
 export(etf_sector)
 export(export_plot)
@@ -123,6 +124,7 @@ export(h2o_results)
 export(h2o_selectmodel)
 export(h2o_shap)
 export(haveInternet)
+export(hex_to_raw)
 export(holidays)
 export(image_metadata)
 export(importxlsx)
@@ -193,6 +195,7 @@ export(queryGA)
 export(quiet)
 export(read.file)
 export(readGS)
+export(read_encrypted)
 export(reduce_pca)
 export(reduce_tsne)
 export(remove_stopwords)
@@ -508,6 +511,7 @@ importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(stats,start)
 importFrom(stats,var)
 importFrom(stats,xtabs)
