feat: new write_encrypted() + docs: update examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -269,6 +269,7 @@ export(wordle_check)
 export(wordle_dictionary)
 export(wordle_simulation)
 export(writeGS)
+export(write_encrypted)
 export(x2y)
 export(x2y_metric)
 export(x2y_preds)
