docs: update docs and duplicated files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -193,6 +193,7 @@ export(quants)
 export(queryDB)
 export(queryGA)
 export(quiet)
+export(raw_to_hex)
 export(read.file)
 export(readGS)
 export(read_encrypted)
