--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,5 +8,13 @@ template:
     docsearch:
       api_key: 450df2517b72ae878fd4539ca2060332
       index_name: lares
-
-favicon: man/figures/logo.png
+  structure:
+    left:
+      - home
+      - reference
+      - news
+  components:
+    news:
+      text: "Changelog"
+      href: news/index.html
+  favicon: man/figures/logo.png
