feat: new experimental update_tags_3() and get_mp3(..., metadata = TRUE)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -260,6 +260,7 @@ export(tree_var)
 export(trim_mp3)
 export(try_require)
 export(updateLares)
+export(update_tags_mp3)
 export(v2t)
 export(vector2text)
 export(warnifnot)
