docs: rename/std mp3_* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,7 +93,6 @@ export(gemini_image)
 export(get_credentials)
 export(get_creds)
 export(get_currency)
-export(get_mp3)
 export(get_tweets)
 export(gg_colour_customs)
 export(gg_fill_customs)
@@ -154,6 +153,9 @@ export(missingness)
 export(model_metrics)
 export(model_preprocess)
 export(move_files)
+export(mp3_get)
+export(mp3_trim)
+export(mp3_update_tags)
 export(mplot_conf)
 export(mplot_cuts)
 export(mplot_cuts_error)
@@ -257,10 +259,8 @@ export(tic)
 export(toc)
 export(topics_rake)
 export(tree_var)
-export(trim_mp3)
 export(try_require)
 export(updateLares)
-export(update_tags_mp3)
 export(v2t)
 export(vector2text)
 export(warnifnot)
