--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: lares
 Type: Package
 Title: Lean Analytics and Robust Exploration Sidekick
-Version: 5.3.3.9002
+Version: 5.3.3.9003
 Authors@R: c(
     person("Bernardo", "Lares", , "laresbernardo@gmail.com", c("aut", "cre")))
 Maintainer: Bernardo Lares <laresbernardo@gmail.com>
@@ -41,7 +41,7 @@ Suggests:
 URL: https://github.com/laresbernardo/lares, https://laresbernardo.github.io/lares/
 BugReports: https://github.com/laresbernardo/lares/issues
 RoxygenNote: 7.3.2
-License: AGPL-3
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Config/testthat/edition: 3
