feat: new toon_reduction()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -257,6 +257,7 @@ export(textTokenizer)
 export(theme_lares)
 export(tic)
 export(toc)
+export(toon_reduction)
 export(topics_rake)
 export(tree_var)
 export(try_require)
