feat: new cal_split() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(cache_exists)
 export(cache_pipe)
 export(cache_read)
 export(cache_write)
+export(cal_split)
 export(categ_reducer)
 export(check_attr)
 export(check_opts)
